# cmake-gtest-travis-template

./: .travis.yml  CMakeLists.txt  README.md
include/: division.h  multiplication.h
src/: division.cpp  main.cpp  multiplication.cpp
tests/: test_division.cpp  test_main.cpp  test_multiplication.cpp
